// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button active + primary 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 dyIMVa Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button active 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 dyIMVa Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button as 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <span
    className="Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
  />
</div>
`;

exports[`Button basic 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button children function 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <span
      className="StyledText-sc-1sadyjn-0 DkZvS Text__StyledGrommetText-sc-1qclgcc-0 bTNLcC"
    >
      Test
    </span>
  </button>
</div>
`;

exports[`Button color 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 eIqAvo Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Test
  </button>
  <button
    className="StyledButton-sc-323bzc-0 eIqAvo Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Test
  </button>
  <button
    className="StyledButton-sc-323bzc-0 djXhWE Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Test
  </button>
  <button
    className="StyledButton-sc-323bzc-0 ipySZc Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button disabled 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 fFEhqs Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  />
  <button
    className="StyledButton-sc-323bzc-0 fFEhqs Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="StyledButton-sc-323bzc-0 fFEhqs Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="StyledButton-sc-323bzc-0 kgMYQy Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="StyledButton-sc-323bzc-0 fFEhqs Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Button
  </button>
  <button
    className="StyledButton-sc-323bzc-0 hdCLMo Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <svg
      color="#f8f8f8"
    />
  </button>
  <button
    className="StyledButton-sc-323bzc-0 jwJUSD Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <svg
      color="#f8f8f8"
    />
  </button>
  <button
    className="StyledButton-sc-323bzc-0 hXwBOe Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <svg
      color="#f8f8f8"
    />
  </button>
  <button
    className="StyledButton-sc-323bzc-0 fFEhqs Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      <svg
        color="#f8f8f8"
      />
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      Button
    </div>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 kgMYQy Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      <svg
        color="#f8f8f8"
      />
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      Button
    </div>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 fFEhqs Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      <svg
        color="#f8f8f8"
      />
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      Button
    </div>
  </button>
</div>
`;

exports[`Button fill 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 jOkRPo Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <button
      className="StyledButton-sc-323bzc-0 ewoXrV Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    />
    <button
      className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    />
    <button
      className="StyledButton-sc-323bzc-0 eMUCep Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    />
    <button
      className="StyledButton-sc-323bzc-0 cdstzI Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="button"
    />
  </button>
</div>
`;

exports[`Button focus 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    class="StyledButton-sc-323bzc-0 XKlFB Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button hoverIndicator as object with color 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 hiThGL Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    hoverIndicator
  </button>
</div>
`;

exports[`Button hoverIndicator as object with invalid color 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 kqXvhh Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    hoverIndicator
  </button>
</div>
`;

exports[`Button hoverIndicator background 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 bssmTU Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    hoverIndicator
  </button>
</div>
`;

exports[`Button hoverIndicator color 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 cWvjdf Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    hoverIndicator
  </button>
</div>
`;

exports[`Button href 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <a
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    href="test"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
  />
</div>
`;

exports[`Button icon label 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      <svg
        color="#f8f8f8"
      />
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      Test
    </div>
  </button>
</div>
`;

exports[`Button primary 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Test
  </button>
</div>
`;

exports[`Button reverse icon label 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      Test
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      <svg
        color="#f8f8f8"
      />
    </div>
  </button>
</div>
`;

exports[`Button size 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 djOnwZ"
>
  <button
    className="StyledButton-sc-323bzc-0 jQIfkU Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Small
  </button>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Medium
  </button>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Default
  </button>
  <button
    className="StyledButton-sc-323bzc-0 cXNdnW Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Large
  </button>
  <button
    className="StyledButton-sc-323bzc-0 jQIfkU Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Small
  </button>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Medium
  </button>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Default
  </button>
  <button
    className="StyledButton-sc-323bzc-0 cXNdnW Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    Large
  </button>
  <button
    className="StyledButton-sc-323bzc-0 dtifQS Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <svg
      aria-label="Add"
      className="StyledIcon-ofa7kd-0 dcacLZ"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,22 L12,2 M2,12 L22,12"
        fill="none"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 dtifQS Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <svg
      aria-label="Add"
      className="StyledIcon-ofa7kd-0 dcacLZ"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,22 L12,2 M2,12 L22,12"
        fill="none"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 dtifQS Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <svg
      aria-label="Add"
      className="StyledIcon-ofa7kd-0 dcacLZ"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,22 L12,2 M2,12 L22,12"
        fill="none"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 dtifQS Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <svg
      aria-label="Add"
      className="StyledIcon-ofa7kd-0 dcacLZ"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,22 L12,2 M2,12 L22,12"
        fill="none"
        stroke="#000"
        strokeWidth="2"
      />
    </svg>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 jQIfkU Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      Small
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      <svg
        aria-label="Next"
        className="StyledIcon-ofa7kd-0 dcacLZ"
        viewBox="0 0 24 24"
      >
        <polyline
          fill="none"
          points="7 2 17 12 7 22"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      Medium
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      <svg
        aria-label="Next"
        className="StyledIcon-ofa7kd-0 dcacLZ"
        viewBox="0 0 24 24"
      >
        <polyline
          fill="none"
          points="7 2 17 12 7 22"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 hmOcFG Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      Default
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      <svg
        aria-label="Next"
        className="StyledIcon-ofa7kd-0 dcacLZ"
        viewBox="0 0 24 24"
      >
        <polyline
          fill="none"
          points="7 2 17 12 7 22"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
  <button
    className="StyledButton-sc-323bzc-0 cXNdnW Button__StyledGrommetButton-sc-5cxguj-0 eSGauk"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseOut={[Function]}
    onMouseOver={[Function]}
    type="button"
  >
    <div
      className="StyledBox-sc-13pk1d4-0 iQEJEP"
    >
      Large
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hjorfk"
      />
      <svg
        aria-label="Next"
        className="StyledIcon-ofa7kd-0 dcacLZ"
        viewBox="0 0 24 24"
      >
        <polyline
          fill="none"
          points="7 2 17 12 7 22"
          stroke="#000"
          strokeWidth="2"
        />
      </svg>
    </div>
  </button>
</div>
`;
